# gruff

./: .c8rc.json  .claude-audit-log.md  .claude-progress.md  .cursorrules  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AUTHOR.md  CENTRAL_PLAZA.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  ESSAY.md  INSTRUCTION.md  LICENSE  Makefile  NOTEBOOK_BASELINE.md  PHASE1_TO_TOPIC_OWNER.md  PHASE2_PER_TOOL_INVENTORY.md  PHASE3_TARGET_STATE.md  README.md  REFERENCE.md  SECURITY.md  SPEC.md  TOPIC_TOOL_MATRIX.md  ULTRAREVIEW_SCOPE_2026-04-20.md  WORKSPACE_GATES.md  campus.code-workspace  canopy  docker-compose.yml  grove  hogwarts-governance.code-workspace  package-lock.json  package.json  roots  router_agents.json  (+4 more)
.claude/agents/: caraxes.md  prince-runtime-intel.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: bump-actions-node24.prompt.md  fix-submodule-path.prompt.md
.github/workflows/: gruff-release.yml  reliability.yml
.pipeline-monitoring/: anticipation-schema.ts  exploration-routine.test.ts  exploration-routine.ts  package-lock.json  package.json  tsconfig.json
bridges/gruff-echoes/: README.md  push-proportion.sh  receiver.py
canvas-design-mlbal/: build_interval_ledger_art.py  interval-ledger.md
design/: README.md  ingestion-pattern.md  inventory-schema.md
design-system/: README.md  SKILL.md  colors_and_type.css  tokens.json
design-system/preview/: _card.css  brand-logo.html  colors-amber.html  colors-graphite.html  colors-semantic.html  components-buttons.html  components-cards.html  components-inputs.html  components-nav.html  spacing-elevation.html  spacing-motion.html  spacing-radius.html  spacing-scale.html  type-body.html  type-display.html  type-scale.html
docs/: CENTRAL_PLAZA.md  COMPOSITION_EIGHTFOLD_GAIN.md  DESIGN.md  DIAGNOSTIC_PATHS.md  FOURFOLD_NEIGHBORHOOD.md  FOUR_ON_THE_FLOOR.md  GATE.md  GRUFF_WALLBOARD_BRIDGE.md  HOGSMADE_RELEASE_READINESS.md  INSTRUCTION.md  LO7_NOTEBOOK_PROTOTYPE.md  LO7_RUNBOOK.md  ONBOARDING.md  OPERATIONS_ROUTER_INGESTER.md  PACKAGING.md  PROTOTYPE_QUESTIONNAIRE.md  REFERENCE.md  SESSION-SHIP-REPORT-2026-04-24.md  SIXTEENFOLD_NEIGHBORHOOD.md  WORKSPACE_GATES.md  index.md  notebook-engine-guide.md  the-elevator-ride.md
go-prototype/: .gitignore  README.md  go.mod
hogsmade-design/: Hogsmade Audit.html  Hogsmade Cockpit.html  README.md
planes/: README.md
prototype/: .gitignore  AGENT_INSTRUCTIONS.md  CASCADE.md  README.md  SCAFFOLD_GUIDE.md  design.md  go.mod
python-prototype/: .gitignore  AGENT_INSTRUCTIONS.md  CASCADE.md  README.md  SCAFFOLD_GUIDE.md  pyproject.toml
python-prototype/src/notebook_engine/: __init__.py  api.py  blocks.py  bridge.py  cli.py  craft.py  grid.py  main.py  manifest.py  service.py  test_doubles.py
python-prototype/src/notebook_engine/static/: gesture_canvas.js  index.html  notebook.js
python-prototype/static/: index.html
python-prototype/tests/: test_api.py  test_blocks.py  test_cli_compass.py  test_compaction.py  test_coverage_gaps.py  test_craft_render.py  test_grid.py  test_halo_compass.py  test_service_doubles.py  test_ws_integration.py
racks/: README.md  servers.json
review-package/: 02-cascade-uncommitted.diff  03-cascade-untracked.tar  06-theme-matrix.md  08-findings.md  09-commit-sync-cicd-green-strategy.md  10-gate2-3-recovery-evidence.md  11-main-batch-manifest.md  13-72h-window-index.md
rust-prototype/: AGENT_INSTRUCTIONS.md  Cargo.toml  README.md  notebook-engine.pptx
rust-prototype/src/: blocks.rs  grid.rs  handlers.rs  main.rs
rust-prototype/static/: index.html
rust-prototype/tests/: grid_quantize.rs
schemas/: gridstral-pattern-v1.schema.json  gruff-proportion-v1.schema.json  notebook-manifest-v1.schema.json  session-seal-v1.schema.json  trust-event-v1.schema.json
scripts/: bump-actions-node24.sh  diagnostic-paths.mjs  dispatch.js  extract-tokens.mjs  fix-submodule-path.sh  lo7_benchmark.sh  lo7_generate.sh  lo7_quickstart.sh  orchestrate.sh  route_config_smoke.mjs  status.js  validate_project_registry.py  verify-gate23-controls.sh  verify-planes.sh
src/: async-io-ordering.test.ts  cli.tsx  routine-runner.test.ts  routine-runner.ts
templates/: gruff.md  watch_animated.html
(+135 files in other folders)
