[project]
name = "notebook-engine"
version = "0.1.0"
description = "Physical-notebook drawing tool - Python prototype"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
notebook-engine = "notebook_engine.main:main"
lo7-manifest = "notebook_engine.cli:run_lo7_manifest"
lo7-heatmap = "notebook_engine.cli:run_lo7_heatmap"
lo7-compass = "notebook_engine.cli:run_lo7_compass"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notebook_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
