[project]
name = "notebook-engine"
version = "0.2.0"
description = "GRUFF Geometry Box — LO7 notebook runtime · python-craft spine"
requires-python = ">=3.11"
# Color palette: aligned with Vision/GRID design tokens
#   primary  → amber-500  #F59E0B   (--amber-500)
#   accent   → cyan-500   #00D9FF   (--cyan-500)
#   bg       → graphite-950 #0A0A0F (--graphite-950)
#   fg       → graphite-50  #FAFAFC (--graphite-50)
# Source: gruff/workspace/design-system/preview/colors_and_type.css
dependencies = [
    # ── Server runtime ───────────────────────────────────────────────
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    # ── Terminal / visualization (rich themes map to GRID design tokens)
    "rich>=13.7.0",
    # ── Tokenizer — BPE token counts for manifest/bridge payloads
    "tiktoken>=0.12.0",
    # ── Structured logging (matches GRID/Vision observability stack)
    "structlog>=23.1.0",
]

# ── PEP 735 Dependency Groups (uv-native · not wheel-shipped) ────────
# Install a group: uv sync --group <name>
# Compose groups:  uv sync --group lo7-full
[dependency-groups]

# Scope: compass — visualization + token-aware rendering
# Use when: running lo7-compass CLI or rendering gruff_compass_x output
compass = [
    "rich>=13.7.0",
    "tiktoken>=0.12.0",
    "numpy>=1.24.0",
]

# Scope: bridge — Gruff bridge payload emission + HTTP transport
# Use when: calling POST /api/bridge/payload or running bridges/gruff-echoes
bridge = [
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
]

# Scope: craft — tokenizer + ML spine for gruff_compass_x module
# Use when: integrating craft-server render pipeline or fold_contrast
craft = [
    "tiktoken>=0.12.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
]

# Scope: lo7-full — complete notebook runtime (compose all functional groups)
# Use when: running notebook-engine in production or building dist wheel
lo7-full = [
    { include-group = "compass" },
    { include-group = "bridge" },
    { include-group = "craft" },
]

# Scope: dev — test, lint, type-check
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
notebook-engine = "notebook_engine.main:main"
lo7-manifest = "notebook_engine.cli:run_lo7_manifest"
lo7-heatmap  = "notebook_engine.cli:run_lo7_heatmap"
lo7-compass  = "notebook_engine.cli:run_lo7_compass"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notebook_engine"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
