[package]
name = "notebook-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notebook-engine"
path = "src/main.rs"

[lib]
name = "notebook_engine"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
